@@ -1,5 +1,6 @@
 package hci.gnomex.billing;
 
+import hci.gnomex.constants.Constants;
 import hci.gnomex.model.BillingItem;
 import hci.gnomex.model.BillingPeriod;
 import hci.gnomex.model.BillingStatus;
@@ -100,6 +101,7 @@ public class IlluminaLibBarcodingPlugin implements BillingPlugin {
       billingItem.setIdLab(request.getIdLab());
       billingItem.setIdPrice(price.getIdPrice());
       billingItem.setIdPriceCategory(price.getIdPriceCategory());
+      billingItem.setSplitType(Constants.BILLING_SPLIT_TYPE_PERCENT_CODE);
 
       billingItems.add(billingItem);
 
