@@ -1,5 +1,6 @@
 package hci.gnomex.billing;
 
+import hci.gnomex.constants.Constants;
 import hci.gnomex.model.BillingItem;
 import hci.gnomex.model.BillingPeriod;
 import hci.gnomex.model.BillingStatus;
@@ -88,6 +89,7 @@ public class MicroarrayAnalysisPlugin implements BillingPlugin {
       billingItem.setIdBillingAccount(request.getIdBillingAccount());      
       billingItem.setIdPrice(price.getIdPrice());
       billingItem.setIdPriceCategory(priceCategory.getIdPriceCategory());
+      billingItem.setSplitType(Constants.BILLING_SPLIT_TYPE_PERCENT_CODE);
 
       // Hold off on saving the notes.  Need to reserve note field
       // for complete date, etc at this time.
