@@ -203,6 +203,7 @@ public class SampleQualityPlugin implements BillingPlugin {
         billingItem.setIdPrice(price.getIdPrice());
         billingItem.setIdPriceCategory(priceCategory.getIdPriceCategory());
         billingItem.setCategory(priceCategory.getName());
+        billingItem.setSplitType(Constants.BILLING_SPLIT_TYPE_PERCENT_CODE);
 
         // Hold off on saving the notes.  Need to reserve note field
         // for complete date, etc at this time.
