@@ -1,5 +1,6 @@
 package hci.gnomex.utility;
 
+import hci.gnomex.constants.Constants;
 import hci.gnomex.model.BillingItem;
 import hci.gnomex.model.BillingStatus;
 import hci.framework.model.DetailObject;
@@ -52,10 +53,14 @@ public class BillingItemParser extends DetailObject implements Serializable {
         String idBillingItemString   = node.getAttributeValue("idBillingItem");
         
         BillingItem billingItem = null;
+        BigDecimal originalUnitPrice = new BigDecimal(0);
+        Integer originalQty = new Integer(0);
         if (idBillingItemString == null || idBillingItemString.equals("") || idBillingItemString.startsWith("BillingItem")) {
           billingItem = new BillingItem();
         } else {
           billingItem = (BillingItem)sess.load(BillingItem.class, new Integer(idBillingItemString));
+          originalUnitPrice = billingItem.getUnitPrice();
+          originalQty = billingItem.getQty();
         }
         
         billingItem.setCategory(node.getAttributeValue("category"));
@@ -86,6 +91,7 @@ public class BillingItemParser extends DetailObject implements Serializable {
         percentageDisplay = percentageDisplay.replaceAll("\\%", "");
         billingItem.setPercentagePrice(percentageDisplay != "" ? new BigDecimal(percentageDisplay).movePointLeft(2) : null);
 
+        /*
         String invoicePrice = node.getAttributeValue("invoicePrice");
         if (!invoicePrice.equals("")) {
           invoicePrice = invoicePrice.replaceAll("\\$", "");
@@ -93,6 +99,19 @@ public class BillingItemParser extends DetailObject implements Serializable {
           billingItem.setInvoicePrice(new BigDecimal(invoicePrice));        
         } else {
           billingItem.setInvoicePrice(null);
+        }
+        */
+        if (billingItem.getSplitType() == null) {
+          billingItem.setSplitType(Constants.BILLING_SPLIT_TYPE_PERCENT_CODE);
+        }
+        if (billingItem.getSplitType().equals(Constants.BILLING_SPLIT_TYPE_PERCENT_CODE)) {
+          billingItem.setInvoicePrice(billingItem.getUnitPrice().multiply(new BigDecimal(billingItem.getQty()).multiply(billingItem.getPercentagePrice())));
+        } else {
+          if (!billingItem.getUnitPrice().equals(originalUnitPrice) || !billingItem.getQty().equals(originalQty)) {
+            BigDecimal originalTotalPrice = originalUnitPrice.multiply(new BigDecimal(originalQty));
+            BigDecimal newTotalPrice = billingItem.getUnitPrice().multiply(new BigDecimal(billingItem.getQty()));
+            billingItem.setInvoicePrice(billingItem.getInvoicePrice().add(newTotalPrice.subtract(originalTotalPrice)));
+          }
         }
         
         if (node.getAttributeValue("codeBillingStatus") != null && !node.getAttributeValue("codeBillingStatus").equals("")) {
